WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59700
[Skia] Fix shadow behavior for both CSS and Canvas
https://bugs.webkit.org/show_bug.cgi?id=59700
Summary
[Skia] Fix shadow behavior for both CSS and Canvas
Mike Reed
Reported
2011-04-28 08:04:34 PDT
fix shadw behavior for both CSS and Canvas
Attachments
Patch
(10.36 KB, patch)
2011-04-28 08:08 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Patch
(10.44 KB, patch)
2011-04-28 10:09 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Patch
(10.45 KB, patch)
2011-04-28 11:47 PDT
,
Mike Reed
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mike Reed
Comment 1
2011-04-28 08:08:23 PDT
Created
attachment 91491
[details]
Patch
WebKit Review Bot
Comment 2
2011-04-28 08:10:48 PDT
Attachment 91491
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:13: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:14: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:15: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:16: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:17: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:18: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:19: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:20: Line contains tab character. [whitespace/tab] [5] Total errors found: 12 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mike Reed
Comment 3
2011-04-28 10:09:04 PDT
Created
attachment 91509
[details]
Patch
Simon Fraser (smfr)
Comment 4
2011-04-28 10:39:14 PDT
Bug title should make it obvious that this is a Skia-only change.
Eric Seidel (no email)
Comment 5
2011-04-28 11:34:47 PDT
Looks fine to me. I'm willing to rubber-stamp this.
Eric Seidel (no email)
Comment 6
2011-04-28 11:35:11 PDT
Comment on
attachment 91509
[details]
Patch Do we need updated test expectations?
Kenneth Russell
Comment 7
2011-04-28 11:37:13 PDT
Comment on
attachment 91509
[details]
Patch Looks fine to me assuming it's been tested. Do you want to update the bug synopsis and ChangeLog descriptions per Simon's feedback?
Mike Reed
Comment 8
2011-04-28 11:44:41 PDT
test expectations are updated, but only to remove expected failures. Basically this is fixing a previous break.
Mike Reed
Comment 9
2011-04-28 11:47:00 PDT
Created
attachment 91531
[details]
Patch
Eric Seidel (no email)
Comment 10
2011-04-28 11:47:49 PDT
Comment on
attachment 91531
[details]
Patch OK.
Stephen White
Comment 11
2011-04-28 12:10:17 PDT
Comment on
attachment 91531
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91531&action=review
> Source/WebCore/platform/graphics/chromium/FontChromiumWin.cpp:-457 > - if (!alpha || windowsCanHandleDrawTextShadow(graphicsContext) || !windowsCanHandleTextDrawingWithoutShadow(graphicsContext)) {
Since you're removing the calls to these functions, I think the only remaining caller is windowsCanHandleTextDrawing(). For clarity, we could also revert that function to be like it was pre-
r83541
, and remove the *Shadow() and *WithoutShadow() flavours. This could be done in a followup patch.
> LayoutTests/platform/chromium/test_expectations.txt:2528 > +BUGCR63921 GPU : fast/canvas/canvas-strokePath-alpha-shadow.html = TEXT TIMEOUT
Unless I'm missing something, these should remain GPU WIN LINUX. We shouldn't be running the canvas tests on GPU MAC.
WebKit Commit Bot
Comment 12
2011-04-28 16:59:57 PDT
Comment on
attachment 91531
[details]
Patch Clearing flags on attachment: 91531 Committed
r85264
: <
http://trac.webkit.org/changeset/85264
>
WebKit Commit Bot
Comment 13
2011-04-28 17:00:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug