Source/WebCore/platform/graphics/chromium/FontChromiumWin.cpp
@@ -454,25 +454,8 @@ void Font::drawGlyphs(GraphicsContext* graphicsContext,
     // Skip 100% transparent text; no need to draw anything.
     if (!alpha && graphicsContext->platformContext()->getStrokeStyle() == NoStroke && !graphicsContext->hasShadow())
         return;
-    if (!alpha || windowsCanHandleDrawTextShadow(graphicsContext) || !windowsCanHandleTextDrawingWithoutShadow(graphicsContext)) {
-        drawGlyphsWin(graphicsContext, font, glyphBuffer, from, numGlyphs, point);
-        return;
-    }
-    // Draw in two passes: skia for the shadow, GDI for foreground text
-    // pass1: shadow (will use skia)
-    graphicsContext->save();
-    graphicsContext->setFillColor(Color::transparent, graphicsContext->fillColorSpace());
+
     drawGlyphsWin(graphicsContext, font, glyphBuffer, from, numGlyphs, point);
-    graphicsContext->restore();
-    // pass2: foreground text (will use GDI)
-    FloatSize shadowOffset;
-    float shadowBlur;
-    Color shadowColor;
-    ColorSpace shadowColorSpace;
-    graphicsContext->getShadow(shadowOffset, shadowBlur, shadowColor, shadowColorSpace);
-    graphicsContext->setShadow(shadowOffset, shadowBlur, Color::transparent, shadowColorSpace);
-    drawGlyphsWin(graphicsContext, font, glyphBuffer, from, numGlyphs, point);
-    graphicsContext->setShadow(shadowOffset, shadowBlur, shadowColor, shadowColorSpace);
 }
 
 FloatRect Font::selectionRectForComplexText(const TextRun& run,
